# operaton-tasks

./: .devcontainer.json  .env.example  .gitignore  .gitlab-ci.yml  .treefmt.toml  AGENTS.md  CHANGELOG.md  Makefile  README.md  TODO.md  devenv.local.yaml  devenv.nix  devenv.yaml  flake.nix  pyproject.toml  test-basic-auth.sh  test-oauth2.sh  vscode-operaton-bpmn-js-modeler-0.6.1.vsix
.github/workflows/: ci.yml  release.yml
examples/: hello_world.py
fixture/: default.nix
fixture/keycloak/: operaton-realm.json
fixture/operaton/: operaton-tasks-hello-world.bpmn
src/operaton/tasks/: __init__.py  api.py  config.py  deco.py  healthz.py  main.py  oauth2.py  runtime.py  types.py  utils.py  worker.py
tests/: conftest.py  test_api_main.py  test_deco_runtime.py  test_healthz.py  test_oauth2.py  test_utils.py  test_worker.py
